test/tests/compiler/13_floating-point_numbers/invalid_lex/bad_exponent_suffix.plx
pub fn main(none) i32 {
    foo: f64 = 1e2x
}
